Fix Text alignment in app-desription and article-previews. Fix line-spacing in title. Blog separated in dedicated component

--- a/client/components/Blog/blog.less
+++ b/client/components/Blog/blog.less
@@ -35,6 +35,17 @@
   margin-bottom: 40px;
 }
 
+.ArticleGallery-back {
+  background-color: @base0E;
+  background-color: rgba(130, 170, 255, 0.05);
+  // background-color: @base07;
+  width: 100%;
+  padding-bottom: 130px;
+  padding-top: 50px;
+  line-height: 33px;
+  // text-align: center;
+}
+
 #ArticleGallery {
   & h2 {
     padding-bottom: 2em;
@@ -56,7 +67,14 @@
     max-height: 17em;
     overflow-y: hidden;
     line-height: 1.6em;
-    text-align: justify;
+    text-align: left;
+    text-indent: 1em;
+    &::first-line {
+      // text-indent: 40px;
+      // color: red;
+      // padding-left: 0.4em;
+      text-indent: 1em;
+    }
   }
 
   & .ArticleDate {
