--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -159,7 +159,11 @@ hr {
   padding-bottom: 20px;
 
   & p { color: @base07;}
-
+  & h4 {
+    // max-width: 80%;
+    margin: 0 3%;
+    text-align: center;
+  }
 }
 
 // Subscribe BEGIN
@@ -278,7 +282,7 @@ hr {
 }
 
 #NotFound {
-  color: @base07;
+  color: @base01;
 }
 
 .btn-black {
@@ -299,7 +303,8 @@ hr {
   text-align: center;
 
   & h4 {
-    text-align: justify;
+    text-align: left;
+    text-indent: 0.4em;
   }
 }
 
